--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>The HTML5 Herald</title>
+  <title>sorin.ai</title>
   <meta name="description" content="sorin.ai">
   <meta name="author" content="SitePoint">
 
