Fix element selection and event handling

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <title>sorin.ai</title>
   <meta name="description" content="sorin.ai">
-  <meta name="author" content="SitePoint">
+  <meta name="author" content="Sorin Muchi">
 
   <link rel="stylesheet" href="css/styles.css">
 
@@ -18,7 +18,7 @@
 <body>
   <div class="page">
     <div class="content">
-        <div class="big text">sorin muchi</div>
+        <div class="big text"><a href="https://sorin.ai">sorin muchi</a></div>
         <div class="big text">software developper</div>
         <div class="big text">machine learning geek</div>
         <!-- <div class="big text">machine learning geek</div>
